--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,9 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/app/*": ["app/*"]
+      // "@/*": ["./*"],
+      "@/app/*": ["app/*"],
+      "@/app/": ["app/*"]
     }
   },
   "include": [
